removed fixed height and assocaited properties of ckeditor and chapterpage component to let it overflow

--- a/client/src/components/learnComponents/textEditor/ckeditor.css
+++ b/client/src/components/learnComponents/textEditor/ckeditor.css
@@ -19,8 +19,8 @@
 .ck .ck-editor__editable {
 	min-width: 77vw !important;
     min-height: 70vh !important; /* Replace with your desired minimum height */
-    max-height: 70vh !important; /* Replace with your desired maximum height */
-    overflow: hidden !important;
+    /* max-height: 70vh !important;  */
+    /* overflow: hidden !important; */
 }
 
 .editor__editable,
