--- a/client/src/components/learnComponents/textEditor/styles.css
+++ b/client/src/components/learnComponents/textEditor/styles.css
@@ -5,9 +5,7 @@
   border-radius: 0 0 5px 5px;
   max-width: 80%;
   min-height: 100%;
-  max-height: 100%;
-  overflow-y: hidden;
-  overflow-x:hidden;
+ 
 }
 
 #TutorialEditor .ProseMirror {
